# GSC

./: GSC cleaned.csv  README.md  app.py  pyproject.toml  requirements.txt
