[project]
name = "gsc-analytics"
version = "0.1.0"
description = "Graduate Success Center Analytics Dashboard"
dependencies = [
    "streamlit",
    "plotly",
    "pandas",
    "polars",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
